user authentication by receiving the code and generating a token

--- a/backend/.env-sample
+++ b/backend/.env-sample
@@ -1,2 +1,4 @@
 GITHUB_CLIENT_ID=seu-id-do-github-application
 GITHUB_CLIENT_SECRET=sua-chave-secreta-do-github-application
+
+JWT_SECRET=uma-chave-aleatoria-para-geracao-do-token-jwt
