upload of project assets

--- a/app/app.json
+++ b/app/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "app",
+    "name": "Do while 2021",
     "slug": "app",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -8,7 +8,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#121214"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
